show connections by default

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     // add layers to map that should be enabled by default
     nodesLayerGroup.addTo(map);
+    connectionsLayerGroup.addTo(map);
     legend.addTo(map);
 
     function isNumeric(str) {
