--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Interactive IRLP Map</title>
+
+    <title>IRLP Map</title>
+
+    <meta name="title" content="IRLP Map">
+    <meta name="description" content="An interactive map of all IRLP nodes and their status.">
+
+    <link rel="icon" type="image/png" href="/icon.png"/>
+    <meta name="og:image" content="/icon.png">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://irlp.liamcottle.net">
+    <meta property="og:title" content="IRLP Map">
+    <meta property="og:description" content="An interactive map of all IRLP nodes and their status.">
+    <meta property="og:image" content="/icon.png">
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
