update meta tags for icon

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta name="title" content="IRLP Map">
     <meta name="description" content="An interactive map of all IRLP nodes and their status.">
 
-    <link rel="icon" type="image/png" href="/icon.png"/>
-    <meta name="og:image" content="/icon.png">
+    <link rel="icon" type="image/png" href="https://irlp.liamcottle.net/icon.png"/>
+    <meta name="og:image" content="https://irlp.liamcottle.net/icon.png">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://irlp.liamcottle.net">
     <meta property="og:title" content="IRLP Map">
     <meta property="og:description" content="An interactive map of all IRLP nodes and their status.">
-    <meta property="og:image" content="/icon.png">
+    <meta property="og:image" content="https://irlp.liamcottle.net/icon.png">
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
