--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>IRLP Map</title>
+    <title>Interactive IRLP Map</title>
 
-    <meta name="title" content="IRLP Map">
+    <meta name="title" content="Interactive IRLP Map">
     <meta name="description" content="An interactive map of all IRLP nodes and their status.">
     <link rel="icon" type="image/png" href="https://irlp.liamcottle.net/icon.png"/>
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://irlp.liamcottle.net">
-    <meta property="og:title" content="IRLP Map">
+    <meta property="og:title" content="Interactive IRLP Map">
     <meta property="og:description" content="An interactive map of all IRLP nodes and their status.">
     <meta property="og:image" content="https://irlp.liamcottle.net/icon-banner.png">
     <meta property="og:image:width" content="1600">
@@ -45,12 +45,52 @@
             border: 1px solid white;
         }
 
+        .link {
+            color: #2563eb;
+        }
+
+        .link:hover {
+            text-decoration: underline;
+        }
+
     </style>
 
 </head>
 <body class="h-full bg-gray-200">
 <div v-cloak id="app" class="flex flex-col h-full w-full overflow-hidden">
-    <div id="map" style="width:100%;height:100%;"></div>
+    <div class="flex flex-col h-full">
+
+        <!-- header -->
+        <div class="flex bg-white p-2">
+            <div class="my-auto mr-3">
+                <img class="w-8 h-8" src="icon.png"/>
+            </div>
+            <div class="my-auto">
+                <div class="font-bold">Interactive IRLP Map</div>
+                <div class="text-sm">Developed by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
+            </div>
+            <div class="flex my-auto ml-auto mr-3 space-x-2">
+                <a href="#" onclick="window.location.reload()">
+                    <div class="hover:bg-gray-200 p-2 rounded-full">
+                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
+                        </svg>
+                    </div>
+                </a>
+                <a href="#" onclick="alert('Click or hover a node to view its details.')">
+                    <div class="hover:bg-gray-200 p-2 rounded-full">
+                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
+                        </svg>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <!-- map -->
+        <div id="map" style="width:100%;height:100%;"></div>
+
+    </div>
 </div>
 <script>
 
@@ -61,7 +101,7 @@
     ], 3);
 
     var openStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | IRLP data from <a target="_blank" href="https://status.irlp.net">IRLP.net</a>',
     }).addTo(map);
 
     // create layer groups
