--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="flex flex-col h-full">
 
         <!-- header -->
-        <div class="flex bg-white p-2">
+        <div class="flex bg-white p-2 border-gray-3400 border-b">
             <div class="my-auto mr-3">
                 <img class="w-8 h-8" src="icon.png"/>
             </div>
@@ -69,7 +69,7 @@
                 <div class="font-bold">Interactive IRLP Map</div>
                 <div class="text-sm">Developed by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
             </div>
-            <div class="flex my-auto ml-auto mr-3 space-x-2">
+            <div class="flex my-auto ml-auto mr-2 space-x-2">
                 <a href="#" onclick="window.location.reload()">
                     <div class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
