--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="my-auto">
                 <div class="font-bold">Interactive IRLP Map</div>
-                <div class="text-sm">Developed by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
+                <div class="text-sm">Created by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
             </div>
             <div class="flex my-auto ml-auto mr-2 space-x-2">
                 <a href="#" onclick="window.location.reload()">
