--- a/index.html
+++ b/index.html
@@ -94,14 +94,23 @@
 </div>
 <script>
 
+    // set map bounds to be a little more than full size to prevent panning off screen
+    var bounds = [
+        [-100, -190],
+        [100, 190]
+    ];
+
     // create map positioned over AU and NZ
-    var map = L.map('map').setView([
-        -30,
+    var map = L.map('map', {
+        maxBounds: bounds,
+    }).setView([
+        -5,
         170,
     ], 3);
 
     var openStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | IRLP data from <a target="_blank" href="https://status.irlp.net">IRLP.net</a>',
+        bounds: bounds,
     }).addTo(map);
 
     // create layer groups
