animate while loading

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="flex my-auto ml-auto mr-2 space-x-2">
                 <a href="#" onclick="window.location.reload()">
-                    <div class="hover:bg-gray-200 p-2 rounded-full">
+                    <div id="reload-button" class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
                         </svg>
@@ -264,10 +264,21 @@
 
     }
 
+    function setLoading(loading){
+        var reloadButton = document.getElementById("reload-button");
+        if(loading){
+            reloadButton.classList.add("animate-spin");
+        } else {
+            reloadButton.classList.remove("animate-spin");
+        }
+    }
+
     // fetch irlp nodes
+    setLoading(true);
     fetch('https://irlp.liamcottle.net/api/v1/nodes').then(async (response) => {
         var json = await response.json();
         onNodesUpdated(json.nodes);
+        setLoading(false);
     });
 
 </script>
