hide logo on mobile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!-- header -->
         <div class="flex bg-white p-2 border-gray-300 border-b">
-            <div class="my-auto mr-3">
+            <div class="hidden sm:block my-auto mr-3">
                 <img class="w-8 h-8" src="icon.png"/>
             </div>
             <div class="my-auto">
