--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     ], 3);
 
     var openStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors | IRLP data from <a target="_blank" href="https://status.irlp.net">IRLP.net</a>',
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | Data from <a target="_blank" href="https://status.irlp.net">IRLP.net</a>',
         bounds: bounds,
     }).addTo(map);
 
