--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
         170,
     ], 3);
 
+    // remove leaflet link
+    map.attributionControl.setPrefix('');
+
     var openStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> | Data from <a target="_blank" href="https://status.irlp.net">IRLP.net</a>',
         bounds: bounds,
