--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </svg>
                     </div>
                 </a>
-                <a href="#" onclick="window.location.reload()">
+                <a href="#" onclick="reload()">
                     <div id="reload-button" class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
@@ -279,6 +279,14 @@
 
     }
 
+    function clearAllNodes() {
+        nodesLayerGroup.clearLayers();
+    }
+
+    function clearAllConnections() {
+        connectionsLayerGroup.clearLayers();
+    }
+
     function closeAllPopups() {
         map.eachLayer(function(layer) {
             if(layer.options.pane === "popupPane"){
@@ -320,7 +328,18 @@
 
     }
 
+    function clearMap() {
+        closeAllPopups();
+        closeAllTooltips();
+        clearAllNodes();
+        clearAllConnections();
+        clearNodeOutline();
+    }
+
     function onNodesUpdated(updatedNodes) {
+
+        // clear previous data
+        clearMap();
 
         // update nodes cache
         nodes = updatedNodes;
@@ -409,13 +428,20 @@
         }
     }
 
-    // fetch irlp nodes
-    setLoading(true);
-    fetch('https://irlp.liamcottle.net/api/v1/nodes').then(async (response) => {
-        var json = await response.json();
-        onNodesUpdated(json.nodes);
-        setLoading(false);
-    });
+    function reload() {
+
+        // fetch irlp nodes
+        setLoading(true);
+
+        fetch('https://irlp.liamcottle.net/api/v1/nodes').then(async (response) => {
+            var json = await response.json();
+            onNodesUpdated(json.nodes);
+            setLoading(false);
+        });
+
+    }
+
+    reload();
 
 </script>
 </body>
