--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <meta property="og:image:width" content="1600">
     <meta property="og:image:height" content="800">
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
@@ -57,7 +56,7 @@
 
 </head>
 <body class="h-full bg-gray-200">
-<div v-cloak id="app" class="flex flex-col h-full w-full overflow-hidden">
+<div class="flex flex-col h-full w-full overflow-hidden">
     <div class="flex flex-col h-full">
 
         <!-- header -->
