--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Interactive IRLP Map</title>
-
     <meta name="title" content="Interactive IRLP Map">
     <meta name="description" content="An interactive map of all IRLP nodes and their status.">
     <link rel="icon" type="image/png" href="https://irlp.liamcottle.net/icon.png"/>
@@ -19,10 +17,17 @@
     <meta property="og:image:width" content="1600">
     <meta property="og:image:height" content="800">
 
+    <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- leaflet map -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+
+    <!-- Hitsteps TRACKING CODE - Manual 2023-05-31 - DO NOT CHANGE -->
+    <script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://cdn-js.xyz/code?code=f4ad83e535aa8455ac944a9539eae7a5';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
+    </script><noscript><a href="http://www.hitsteps.com/"><img src="//cdn-js.xyz/code?mode=img&amp;code=f4ad83e535aa8455ac944a9539eae7a5" alt="web statistics" width="1" height="1" />Realtime Web Statistics</a></noscript>
+    <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
 
     <style>
 
