--- a/index.html
+++ b/index.html
@@ -57,6 +57,42 @@
             text-decoration: underline;
         }
 
+        .tooltip {
+            position: relative;
+            display: inline-block;
+        }
+
+        .tooltip .tooltip-text {
+            visibility: hidden;
+            width: 80px;
+            background-color: black;
+            color: #fff;
+            text-align: center;
+            padding: 4px 0;
+            border-radius: 6px;
+            position: absolute;
+            z-index: 10000;
+            top: 100%;
+            left: 50%;
+            margin-top: 8px;
+            margin-left: -40px; /* Use half of the width (120/2 = 60), to center the tooltip */
+        }
+
+        .tooltip .tooltip-text::after {
+            content: " ";
+            position: absolute;
+            bottom: 100%;  /* At the top of the tooltip */
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: transparent transparent black transparent;
+        }
+
+        .tooltip:hover .tooltip-text {
+            visibility: visible;
+        }
+
     </style>
 
 </head>
@@ -74,32 +110,44 @@
                 <div class="text-sm">Created by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
             </div>
             <div class="flex my-auto ml-auto mr-2 space-x-1">
-                <a href="#" onclick="searchNodes()">
+                <a href="#" class="tooltip" onclick="searchNodes()">
                     <div id="search-button" class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                         </svg>
                     </div>
+                    <div class="hidden sm:block">
+                        <span class="tooltip-text">Search</span>
+                    </div>
                 </a>
-                <a href="#" onclick="goToRandomNode()">
+                <a href="#" class="tooltip" onclick="goToRandomNode()">
                     <div id="random-button" class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                         </svg>
                     </div>
+                    <div class="hidden sm:block">
+                        <span class="tooltip-text">Random</span>
+                    </div>
                 </a>
-                <a href="#" onclick="reload()">
+                <a href="#" class="tooltip" onclick="reload()">
                     <div id="reload-button" class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
                         </svg>
                     </div>
+                    <div class="hidden sm:block">
+                        <span class="tooltip-text">Reload</span>
+                    </div>
                 </a>
-                <a href="#" onclick="alert('Click or hover a node to view its details.')">
+                <a href="#" class="tooltip" onclick="alert('Click or hover a node to view its details.')">
                     <div class="hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
                         </svg>
+                    </div>
+                    <div class="hidden sm:block">
+                        <span class="tooltip-text">Help</span>
                     </div>
                 </a>
             </div>
