--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 <div class="font-bold">Interactive IRLP Map</div>
                 <div class="text-sm">Created by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
             </div>
-            <div class="flex my-auto ml-auto mr-2 space-x-1">
+            <div class="flex my-auto ml-auto mr-2 space-x-2">
                 <a href="#" class="tooltip" onclick="searchNodes()">
-                    <div id="search-button" class="hover:bg-gray-200 p-2 rounded-full">
+                    <div id="search-button" class="bg-gray-100 hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
                         </svg>
@@ -121,7 +121,7 @@
                     </div>
                 </a>
                 <a href="#" class="tooltip" onclick="goToRandomNode()">
-                    <div id="random-button" class="hover:bg-gray-200 p-2 rounded-full">
+                    <div id="random-button" class="bg-gray-100 hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
                         </svg>
@@ -131,7 +131,7 @@
                     </div>
                 </a>
                 <a href="#" class="tooltip" onclick="reload()">
-                    <div id="reload-button" class="hover:bg-gray-200 p-2 rounded-full">
+                    <div id="reload-button" class="bg-gray-100 hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99" />
                         </svg>
@@ -141,7 +141,7 @@
                     </div>
                 </a>
                 <a href="#" class="tooltip" onclick="alert('Click or hover a node to view its details.')">
-                    <div class="hover:bg-gray-200 p-2 rounded-full">
+                    <div class="bg-gray-100 hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
                         </svg>
