ui improvements for mobile

--- a/index.html
+++ b/index.html
@@ -107,9 +107,20 @@
             </div>
             <div class="my-auto">
                 <div class="font-bold">Interactive IRLP Map</div>
-                <div class="text-sm">Created by <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a> <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a></div>
+                <div class="text-sm">
+                    <div class="hidden sm:inline-block">
+                        <span>Created by</span>
+                        <a class="link" target="_blank" href="https://liamcottle.com">Liam Cottle</a>
+                        <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a>
+                    </div>
+                    <div class="inline-block sm:hidden">
+                        <span>Created by</span>
+                        <a class="link" target="_blank" href="https://liamcottle.com">Liam</a>
+                        <a class="link" target="_blank" href="https://www.qrz.com/db/zl2dev">ZL2DEV</a>
+                    </div>
+                </div>
             </div>
-            <div class="flex my-auto ml-auto mr-2 space-x-2">
+            <div class="flex my-auto ml-auto mr-0 sm:mr-2 space-x-1 sm:space-x-2">
                 <a href="#" class="tooltip" onclick="searchNodes()">
                     <div id="search-button" class="bg-gray-100 hover:bg-gray-200 p-2 rounded-full">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
