add latlng debug

--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
         clearNodeOutline();
     });
 
+    // // show latlng where mouse is
+    // map.on('mousemove', function(event) {
+    //    console.log(event.latlng);
+    // });
+
     function isNumeric(str) {
         if (typeof str != "string") return false // we only process strings!
         return !isNaN(str) && // use type coercion to parse the _entirety_ of the string (`parseFloat` alone does not do this)...
